--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
 
       <section class="services">
 
-        <section id="search-engine-optimization" class="service">
+        <section class="service" id="search-engine-optimization">
 
           <img
-            src="./assets/images/search-engine-optimization.jpg"
-            class="float-left"
-            alt="A top down view of a desk featuring coffee, colourful pens, and a notebook with an SEO brainstorm"
+            src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A top down view of a desk featuring coffee, colourful pens, and a notebook with an SEO brainstorm"
           />
           <h2>Search Engine Optimization</h2>
 
@@ -59,12 +57,9 @@
 
         </section>
 
-        <section id="online-reputation-management" class="service">
+        <section class="service" id="online-reputation-management">
 
-          <img
-            src="./assets/images/online-reputation-management.jpg"
-            alt="A man using his phone and a laptop which shows graphs and 'reputation' in bold lettering"
-            class="float-right"
+          <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A man using his phone and a laptop which shows graphs and 'reputation' in bold lettering"
           />
 
           <h2>Online Reputation Management</h2>
@@ -79,12 +74,11 @@
 
         </section>
 
-        <section id="social-media-marketing" class="service">
+        <section class="service" id="social-media-marketing">
 
           <img
-            src="./assets/images/social-media-marketing.jpg"
-            alt="A top down view of several people sat at a table discussing social media with colourful signs laid out"
-            class="float-left"
+            src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A top down view of several people sat at a table discussing social media with colourful signs laid out"
+
           />
 
           <h2>Social Media Marketing</h2>
