index.html formatting edit

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <!-- Background Image -->
 
-    <figure class="hero" role="img" alt="Office workers look at a project in a conference room">
-    </figure>
+    <section class="hero" role="img" alt="Office workers look at a project in a conference room">
+    </section>
 
     <!-- Main Content -->
 
